# codeforge

./: .gitignore  LICENSE  PROJECT_STATUS.md  README.md  RESTORE_GUIDE.md  clean_structure.py  cli_main.py  pyproject.toml
branding/: README.md  colors.css  github-banner.md  identity-guide.md
final_check/: README.md  main.py
src/codeforge/: __init__.py
src/codeforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/codeforge/codeforge.egg-info/: PKG-INFO  entry_points.txt
src/codeforge/core/: version.py
src/codeforge/modules/scaffolder/: engine.py
src/codeforge/templates/python_basic/: README.md  main.py
src/core/: version.py
test_clean/: README.md  main.py
